deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: findash-api-ingress

spec:
  ingressClassName: webapprouting.kubernetes.azure.com

  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: findash-api-service  #matches the service.yaml service name
            
            port:
              number: 80
